# YouTube-Downloader

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py  worker.py
tests/: conftest.py  test_main.py
