[project]
name = "YouTube-Downloader"
version = "0.1.0"
description = "A practice FastAPI app for downloading YouTube videos with Celery & RabbitMQ"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "yt-dlp",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --maxfail=1 --disable-warnings"
testpaths = [
    "tests",
]

[tool.ruff]
# Top-level metadata
line-length = 79
target-version = "py310"

[tool.ruff.lint]
# Enforce ALL rules (style, correctness, security, etc.)
select = ["ALL"]
# Ignore incompatible or unwanted warnings
ignore = [
    "D203",     # incompatible with D211
    "D213",     # incompatible with D212
    "EXE002",   # executable file but no shebang
    "D100",     # missing docstring in module
    "D104",     # missing docstring in package
    "FAST002",  # FastAPI dependency without Annotated
    "PTH110",   # os.path.exists() should be Path.exists()
    "PTH118",   # os.path.join() should be Path with / operator
    "PTH103",   # open() should be Path.open()
]
# Do not autofix some issues
unfixable = ["F401", "F841"]
# Ensure no unused noqa
extend-select = ["RUF100"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 72

[tool.ruff.lint.per-file-ignores]
# Allow assert only in tests
"tests/*" = ["S101"]
